# haskell-gltf-loader

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  cabal.project  flake.nix  fourmolu.yaml  gltf-loader.cabal  package.yaml  stack-9.2.yaml  stack.yaml
.github/workflows/: build.yml  test.yml
app/: Main.hs
app/Command/GLTF/: Loader.hs
app/Command/GLTF/Loader/: App.hs  Run.hs
data/: cube-colored.gltf  cube-separate.gltf  cube.glb  cube.gltf  invalid.gltf  untitled.gltf
src/Text/GLTF/: Loader.hs
src/Text/GLTF/Loader/: Adapter.hs  BufferAccessor.hs  Decoders.hs  Errors.hs  Glb.hs  Gltf.hs  MonadAdapter.hs
src/Text/GLTF/Loader/Internal/: Adapter.hs  BufferAccessor.hs  Decoders.hs  MonadAdapter.hs
test/: UtilSpec.hs
test/Text/GLTF/: LoaderSpec.hs
test/Text/GLTF/Loader/: AdapterSpec.hs  BufferAccessorSpec.hs
test/Text/GLTF/Loader/Internal/: AdapterSpec.hs  BufferAccessorSpec.hs
test/Text/GLTF/Loader/Test/: MkGltf.hs
