cabal-version:      3.0

name:           gltf-loader
version:        0.3.0.0
synopsis:       High level GlTF loader
description:    Please see the README on Github at <https://github.com/sgillespie/haskell-gltf-loader#readme>
category:       Graphics
homepage:       https://github.com/sgillespie/haskell-gltf-loader#readme
license:        MIT
license-file:   LICENSE
author:         Sean D Gillespie
maintainer:     sean@mistersg.net
copyright:      2022 Sean Gillespie
build-type:     Simple
extra-source-files:
    README.md
    data/big-cube.gltf
    data/cube-colored.gltf
    data/cube-separate.bin
    data/cube-separate.gltf
    data/cube.glb
    data/cube.gltf
    data/invalid.gltf
    data/Untitled.png

source-repository head
    type: git
    location: https://github.com/sgillespie/haskell-gltf-loader

common warnings
    ghc-options: -Wall

library
    import: warnings
    exposed-modules:
        Text.GLTF.Loader
        Text.GLTF.Loader.Errors
        Text.GLTF.Loader.Glb
        Text.GLTF.Loader.Gltf
        Text.GLTF.Loader.Internal.Adapter
        Text.GLTF.Loader.Internal.BufferAccessor
        Text.GLTF.Loader.Internal.Decoders
        Text.GLTF.Loader.Internal.MonadAdapter
    other-modules:
        Paths_gltf_loader
    hs-source-dirs:
        src
    default-extensions:
        BangPatterns
        BinaryLiterals
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveDataTypeable
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DoAndIfThenElse
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        GeneralizedNewtypeDeriving
        InstanceSigs
        KindSignatures
        LambdaCase
        MultiParamTypeClasses
        MultiWayIf
        NamedFieldPuns
        NoImplicitPrelude
        OverloadedStrings
        OverloadedLists
        PartialTypeSignatures
        PatternGuards
        PolyKinds
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeFamilies
        TypeSynonymInstances
        ViewPatterns
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wpartial-fields
        -Wredundant-constraints
    build-depends:
        base >=4.14.0 && <5,
        binary ^>=0.8.8,
        bytestring >=0.10.12 && <0.12,
        gltf-codec ^>=0.1.0,
        linear ^>=1.22,
        microlens ^>=0.4.13,
        microlens-platform ^>=0.4.3,
        rio ^>=0.1.22,
        unordered-containers ^>=0.2.19
    default-language: Haskell2010

executable gltf-loader
    import: warnings
    main-is: Main.hs
    other-modules:
      Command.GLTF.Loader
      Command.GLTF.Loader.App
      Command.GLTF.Loader.Run
      Paths_gltf_loader
    hs-source-dirs: app
    default-extensions:
        BangPatterns
        BinaryLiterals
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveDataTypeable
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DoAndIfThenElse
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        GeneralizedNewtypeDeriving
        InstanceSigs
        KindSignatures
        LambdaCase
        MultiParamTypeClasses
        MultiWayIf
        NamedFieldPuns
        NoImplicitPrelude
        OverloadedStrings
        OverloadedLists
        PartialTypeSignatures
        PatternGuards
        PolyKinds
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeFamilies
        TypeSynonymInstances
        ViewPatterns
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wpartial-fields
        -Wredundant-constraints
        -threaded
        -rtsopts
        -with-rtsopts=-N
    build-depends:
        base >=4.14.0 && <5,
        gltf-loader,
        linear ^>=1.22,
        microlens ^>=0.4.13,
        microlens-platform ^>=0.4.3,
        optparse-simple ^>=0.1.1,
        rio ^>=0.1.22
    default-language: Haskell2010

test-suite gltf-loader-test
    import: warnings
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    other-modules:
        Text.GLTF.Loader.Internal.AdapterSpec
        Text.GLTF.Loader.Internal.BufferAccessorSpec
        Text.GLTF.Loader.Test.MkGltf
        Text.GLTF.LoaderSpec
        Paths_gltf_loader
    hs-source-dirs: test
    default-extensions:
      BangPatterns
      BinaryLiterals
      ConstraintKinds
      DataKinds
      DefaultSignatures
      DeriveDataTypeable
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveTraversable
      DoAndIfThenElse
      EmptyDataDecls
      ExistentialQuantification
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GADTs
      GeneralizedNewtypeDeriving
      InstanceSigs
      KindSignatures
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      NoImplicitPrelude
      OverloadedStrings
      OverloadedLists
      PartialTypeSignatures
      PatternGuards
      PolyKinds
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      StandaloneDeriving
      TupleSections
      TypeFamilies
      TypeSynonymInstances
      ViewPatterns
    ghc-options:
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wpartial-fields
      -Wredundant-constraints
      -threaded
      -rtsopts
      -with-rtsopts=-N
    default-language: Haskell2010
    build-depends:
      base >=4.14.0 && <5,
      base64 >=0.4.2 && <2,
      binary ^>=0.8.8,
      bytestring >=0.10.12 && <0.12,
      gltf-codec ^>=0.1.0,
      gltf-loader,
      hspec >=2.10.10 && <3,
      linear ^>=1.22,
      microlens ^>=0.4.13,
      microlens-platform ^>=0.4.3,
      rio ^>=0.1.22,
      unordered-containers ^>=0.2.19
